# NEU_MultiModalBrainModel

./: .env.template  .gitignore  ABIDE.ipynb  BrainADL_ABIDE_aaltf.py  BrainADL_ABIDE_cc200.py  BrainADL_ABIDE_cc200nf.py  BrainADL_ABIDE_cc200tf.py  BrainADL_ABIDE_cc400_BrainNetCNN.py  BrainADL_ABIDE_cc400_GraphTransformer.py  BrainADL_ABIDE_cc400_RF.py  BrainADL_ABIDE_cc400_SVM.py  BrainADL_ABIDE_cc400tf.py  BrainADL_ABIDE_dos160tf.py  BrainADL_ABIDE_ensemble8.py  BrainADL_ABIDE_eztf.py  BrainADL_ABIDE_hotf.py  BrainADL_ABIDE_tttf.py  NodeFormer.py  README.md  SGFormer.py  main.py  my_models.py  pyproject.toml  requirements.txt  transformer_experiment_runner.py
ABIDEdata/: readme.md
paper/: paper.tex  references.bib
png/: E2E.drawio  MultiModalBrain.drawio  SGFormer.drawio  SVM.drawio  graphormer.drawio  readme.md  simpleTransormer.drawio
