[project]
name = "neu-multimodalbrainmodel"
version = "0.1.0"
description = "analyzing and integrating multi-modal brain fmri data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==1.23.5",
    "scikit-learn==1.1.3",
    "scipy==1.10.1",
    "pandas==1.5.1",
    "matplotlib==3.6.2",
    "pip==25.0.1",
    "ipykernel==6.29.5",
    "setuptools==75.3.2",
    "torch>=2.8.0",
    "python-dotenv>=1.2.1",
    "torch-sparse>=0.6.18",
    "torch-geometric==1.7.2",
    "torch-scatter>=2.1.2",
]

[tool.uv.extra-build-dependencies]
torch-sparse = ["torch"]
torch_geometric = ["torch"]
torch_scatter = ["torch"]
